--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,14 @@ body {
 .offcanvas {
     background: black;
     transition: all 1s ease-in-out;
+    background-image: url("./images/FW_Folded_Paper_03.png");
+    background-size: 490px;
 }
 
 .offcanvas-body a {
-    color: white;
+    color: #FFED00;
     font-size: 24px;
     text-decoration: none;
-   
 }
 
 .offcanvas-body ul{
@@ -34,5 +35,10 @@ body {
 
 .offcanvas-body li {
     margin: 20px;
+}
+
+.homepage-images {
+    margin: 0 auto;
+    padding: 0;
 }
 
