--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ header img{
     text-decoration: none;
     text-transform: uppercase;
     color: #FFED00;
+    font-size: 10px;
 }
 
 .happy-hour {
@@ -89,15 +90,16 @@ header img{
     border-radius: 5px;
 }
 
+.drinks {
+   
+}
 
 .drinks-one {
    background: url(./miracle-images/cardboard.png);
-   background-size: 1170px;
    background-position: center;
    background-repeat: no-repeat;
+   background-size: 120% 200%;
 }
-
-
 
 .december {
     text-decoration: none;
@@ -114,3 +116,6 @@ header img{
 }
 
 
+@media (max-width: 900px) {
+
+}
