--- a/styles.css
+++ b/styles.css
@@ -113,8 +113,24 @@ header img{
     text-decoration: none;
     font-size: 12px;
     color: #FFED00;
+    text-transform: uppercase;
 }
 
+.booking-header {
+    background: url(./private-booking-images/Home.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 936px;
+    height: 526px;
+}
+
+.booking-header a {
+    margin-top: 345px;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
 
 @media (max-width: 900px) {
 
